--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.19.2",
     "puppeteer": "^22.7.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.25.0"
+    "whatsapp-web.js": "^1.25.0",
+    "jimp": "^0.22.10"
   }
 }
 
