--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "node": ">=18"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bcryptjs": "^3.0.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.2",
+    "groq-sdk": "^0.30.0",
+    "jimp": "^0.22.10",
     "puppeteer": "^22.7.1",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.25.0",
-    "jimp": "^0.22.10"
+    "whatsapp-web.js": "^1.25.0"
   }
 }
-
-
