--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.2",
     "groq-sdk": "^0.30.0",
-    "jimp": "^0.22.10",
+    "helmet": "^8.1.0",
     "puppeteer": "^22.7.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.25.0"
